--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="canonical" href="https://www.iogdesign.com" />
+    <meta
+      name="keywords"
+      content="Shopify, Freelance Web Services, Website Help, IOG Designs"
+    />
+    <meta name="author" content="Roscoe Johnson" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IOG Designs</title>
+    <title>
+      Premier custom website solutions for Shopify e-commerce and full stack
+      applications
+    </title>
+    <meta
+      name="description"
+      content="Freelance and Software Development Services specializing in custom full stack websites and Shopify e-commerce development IOG Designs"
+    />
   </head>
   <body>
+    <h1>
+      Premier custom website solutions for Shopify e-commerce and full stack
+      applications
+    </h1>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
