Heading 1  in html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
   </head>
   <body>
-    <h1>
+    <h1 style="color: transparent">
       Premier custom website solutions for Shopify e-commerce and full stack
       applications
     </h1>
